# deconfig

./: .gitignore  README.md  build_dist.sh  pylintrc  requirements-dev.txt  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml  pylint-black.yml  pylint.yml  pytest.yml
deconfig/: README.md  pyproject.toml
deconfig/deconfig/core/: field_util.py
deconfig/deconfig/core/adapter/: adapter_error.py  env_adapter.py
src/: setup.py
src/deconfig/: __init__.py  __version__.py  core.py  env_adapter.py  ini_adapter.py  pyproject.toml  transformer.py  validations.py
src/deconfig/core/: field_util.py
src/deconfig/core/adapter/: adapter_base.py  ini_adapter.py
tests/test_deconfig/: test_core.py  test_deconfig.py  test_env_adapter.py  test_ini_adapter.py  test_transformers.py  test_validations.py
