[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deconfig"
version = "0.1.0"
description = "A simple configuration library for Python"
authors = [
    {name="ybhaw"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ybhaw/deconfig"
Issues = "https://github.com/ybhaw/deconfig/issues"

